--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.3",
+    "countries-list": "^2.6.1",
     "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "next-connect": "^0.13.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^9.1.3",
+    "stripe": "^12.12.0",
     "supports-color": "^9.3.1"
   },
   "devDependencies": {
