--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-loader-spinner": "^5.3.4",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "stripe": "^12.12.0",
